Fix bottom panel spacing with media queries

--- a/src/style.css
+++ b/src/style.css
@@ -72,7 +72,6 @@ body {
 .panel {
     opacity: 0;
     width: 0;
-    height: 0;
     transition: transform 300ms ease, -webkit-transform 300ms ease;
     transform: translateX(70px);
 }
@@ -170,6 +169,10 @@ body {
     }
 }
 
+.html-panel .inner-panel {
+    padding-bottom: 2rem;
+}
+
 @media (min-width: 1000px) and (max-width: 1920px) {
     .article-content .img-container {
         padding-bottom: 40%;
@@ -200,7 +203,6 @@ body {
 
 .html-panel .panel {
     padding-top: 136px;
-    height: 100%;
 }
 
 @media (max-width: 2561px) {
